--- a/Exams/01/01.Car Dealers/index.html
+++ b/Exams/01/01.Car Dealers/index.html
@@ -17,10 +17,10 @@
                     <legend><span class="number">1</span> Car Details</legend>
 
                     <label for="make">Make:</label>
-                    <input type="text" id="make" name="make" value="test" />
+                    <input type="text" id="make" name="make" />
 
                     <label for="model">Model:</label>
-                    <input type="text" id="model" name="model" value="test" />
+                    <input type="text" id="model" name="model" />
 
                     <label for="year">Production year:</label>
                     <input type="number" id="year" min="1990" max="2022" step="1" value="2017" />
